--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forceify",
-  "version": "0.0.1-development",
+  "version": "0.0.2",
   "description": "Fast, optimized and lightweight cross-device 3D-Touch handling javascript/typescript library",
   "main": "js/Forceify.js",
   "types": "js/Forceify.d.ts",
