fixes and improvements for 3d touch devices

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "prettier.requireConfig": true
+  "eslint.enable": false,
+  "prettier.requireConfig": true,
+  "tslint.jsEnable": false,
+  "tslint.exclude": "*.js",
+  "javascript.format.enable": false,
+  "files.associations": {
+    "*.js": "javascript"
+  }
 }
